[若松]調整中。

--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -11,7 +11,7 @@
 		</b>
 		
 		<!--a href="/ボーデンさんのhtml名">-->
-		<a href="/nextpagelogin">
+		<a href="/_nextpagelogin">
 			<img src="/image/login.png" alt="Sample Image">
 			ログイン
 		</a>
