[若松]調整中。

--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -51,7 +51,7 @@
 
 
 		<!--ログインIDを取得するために仮のログイン画面へ飛ぶ-->
-		<form method="get" action="/nextpagelogin">
+		<form method="get" action="/_nextpagelogin">
 			<button type="submit">登録画面へ</button>
 		</form>
 
@@ -85,7 +85,7 @@
 			
 			<!-- 山口さんのファイル名を記載 -->
 			<!-- 同一フォルダにあるファイル名nextpage.htmlファイルに飛ぶ -->
-			<form method="get" action="/nextpage">
+			<form method="get" action="/_nextpage">
 
 
 				<label for="date-select">日付:</label>
