--- a/src/main/resources/templates/cookCategory.html
+++ b/src/main/resources/templates/cookCategory.html
@@ -127,36 +127,21 @@
 
 			<div class="menu-item">
 				<img th:src="'data:image/png;base64,'+${nikubentou}" alt="肉弁当">
-				<div class="text-wrapper1">
-					<div class="item-name">
-						<a href="/cookCategory/niku" class="menu-link">肉弁当一覧</a>
-					</div>
-					<div class="icon-circle">
-						&gt;
-					</div>
-				</div>
+				<a href="/cookCategory/niku" class="button">
+					<div class="item-name2">肉弁当一覧</div>
+				</a>
 			</div>
 			<div class="menu-item">
 				<img th:src="'data:image/png;base64,'+${sakanabentou}" alt="魚弁当">
-				<div class="text-wrapper1">
-					<div class="item-name">
-						<a href="/cookCategory/sakana" class="menu-link">魚弁当一覧</a>
-					</div>
-					<div class="icon-circle">
-						&gt;
-					</div>
-				</div>
+				<a href="/cookCategory/sakana" class="button">
+					<div class="item-name2">魚弁当一覧</div>
+				</a>
 			</div>
 			<div class="menu-item">
 				<img th:src="'data:image/png;base64,'+${donburi}" alt="丼ぶり">
-				<div class="text-wrapper1">
-					<div class="item-name">
-						<a href="/cookCategory/donburi" class="menu-link">丼ぶり一覧</a>
-					</div>
-					<div class="icon-circle">
-						&gt;
-					</div>
-				</div>
+				<a href="/cookCategory/donburi" class="button">
+					<div class="item-name2">丼ぶり一覧</div>
+				</a>
 			</div>
 
 		</div>
