[若松] プルエラー

--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -86,7 +86,7 @@
 			<!-- 山口さんのファイル名を記載 -->
 			<!-- 同一フォルダにあるファイル名nextpage.htmlファイルに飛ぶ -->
 <!--			<form method="get" action="/_nextpage">-->
-				<form method="get" action="/shopList">
+				<form method="get" action="/check-holiday">
 
 
 					<label for="date-select">日付:</label>
