共通レイアウト編集

--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-
+<link th:href="@{/css/layout.css}" rel="stylesheet">
 <!-- 共通化するヘッダー -->
 <header>
 	<nav>
 		<b class="left-align">
-			<img src="/image/benpura.png" alt="Extra Image" class="extra-image">
-			弁プラ
+			<img src="/image/benpura_logo.png" alt="Extra Image" class="extra-image">
 		</b>
 		
 		<!--a href="/ボーデンさんのhtml名">-->
