--- a/src/main/resources/static/css/settlement.css
+++ b/src/main/resources/static/css/settlement.css
@@ -3,7 +3,7 @@
 /* 全体のスタイル設定 */
 body {
     font-family: 'M PLUS Rounded 1c', sans-serif;
-    max-width: 600px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -21,13 +21,16 @@ header {
     text-align: center;
     color: #ff9800; /* オレンジ */
 }
-
+.contens {
+    width:75%;
+    margin:auto;
+}
 .product {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 3%;
     background-color: #fff;
-    padding: 15px;
+    padding: 2%;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
