--- a/src/main/resources/templates/donburi.html
+++ b/src/main/resources/templates/donburi.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{commons/layout}">
 
 <head>
 	<meta charset="UTF-8">
@@ -112,7 +113,7 @@
 		</div>
 
 		<div class="box4">
-			<h1><a href="/cookCategory">カテゴリへ戻る</a></h1>
+			<button class="category-button"><a href="/cookCategory">カテゴリへ戻る</a></button>
 		</div>
 		<div class="cursor"></div>
 		<script>
