--- a/src/main/resources/templates/cookCategory.html
+++ b/src/main/resources/templates/cookCategory.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{commons/layout}">
 
 <head>
 	<meta charset="UTF-8">
@@ -9,6 +10,7 @@
 </head>
 
 <body>
+
 	<div class="menu-section">
 		<div class="text-bound">
 			<h1> BANPURA MENU 弁ぷら</h1>
