--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
-
+<link th:href="@{/css/layout.css}" rel="stylesheet">
 <!-- 共通化するヘッダー -->
 <header>
-	<nav>
-		<b class="left-align">
-			<img src="/image/benpura.png" alt="Extra Image" class="extra-image">
-			弁プラ
-		</b>
-		
-		<!--a href="/ボーデンさんのhtml名">-->
-		<a href="/_nextpagelogin">
-			<img src="/image/login.png" alt="Sample Image">
-			ログイン
-		</a>
-		
-		<!--a href="/若松さんのhtml名">-->
-		<a href="/calender">
-			<img src="/image/mypage.png" alt="Sample Image">
-			マイページ
-		</a>
-		
-		<!--a href="/川口さんのhtml名">-->
-		<a href="/cart">
-			<img src="/image/cart.png" alt="Sample Image">
-			カート
-		</a>
-	</nav>
-</header>
+	<div class="header">
 
+		<nav>
+			<b class="left-align">
+				<img src="/image/benpura_logo.png" alt="Extra Image" class="extra-image">
+			</b>
+
+			<!--a href="/ボーデンさんのhtml名">-->
+			<a href="/_nextpagelogin">
+				<img src="/image/login.png" alt="Sample Image">
+				ログイン
+			</a>
+
+			<!--a href="/若松さんのhtml名">-->
+			<a href="/calender">
+				<img src="/image/mypage.png" alt="Sample Image">
+				マイページ
+			</a>
+
+			<!--a href="/川口さんのhtml名">-->
+			<a href="/cart">
+				<img src="/image/cart.png" alt="Sample Image">
+				カート
+			</a>
+		</nav>
+	</div>
+</header>
