--- a/src/main/resources/templates/niku.html
+++ b/src/main/resources/templates/niku.html
@@ -116,7 +116,7 @@
 		</div>
 
 		<div class="box4">
-			<button class="category-button"><a href="/cookCategory">カテゴリへ戻る</a></button>
+		    <a href="/cookCategory" class="category-button">カテゴリへ戻る</a>
 		</div>
 		<div class="cursor"></div>
 		<script>
