--- a/src/main/resources/static/css/shopList.css
+++ b/src/main/resources/static/css/shopList.css
@@ -17,26 +17,14 @@ body {
 }
 
 #headline {
-	/* ヘッドラインの背景色 */
-	height: 100px;
-	background-color: chartreuse;
-
-	display: flex;
-	align-items: center;
-/*	justify-content: center;*/
-	/* 下線を追加 */
+/*	position: fixed;*/
+	/*	 下線を追加 */
 	border-bottom: 3px solid rgb(0, 128, 0);
-	
-	
 }
 
-.benpuraimg{
-	height:120%;
-	margin-left: 3%;
-}
 
 .title {
-/*	text-align: center;*/
+	/*	text-align: center;*/
 	color: red;
 	font-size: 30px;
 }
@@ -101,6 +89,7 @@ h2:first-letter {
 	position: relative;
 	padding: 1rem 2rem calc(1rem + 10px);
 
+	/** お店同士の隙間 **/
 	margin: 50px;
 
 	margin-left: 20%;
@@ -148,7 +137,7 @@ h2:first-letter {
 
 .shopimg {
 	/* 写真の幅を30%に設定 */
-	width: 30%;
+	width: 80%;
 	margin-left: 3%;
 	margin-right: 3%;
 	margin-top: 3%;
