--- a/src/main/resources/templates/shopList.html
+++ b/src/main/resources/templates/shopList.html
@@ -9,10 +9,10 @@
 
 <body>
 	<div id="headline">
-<!--		<a th:href="@{/}" >-->
-		<img class="benpuraimg" src="../image/benpuraのロゴ.png";/>
-<!--		</a>-->
-		<p class="title">ここにロゴとマイページを挿入</p>
+		<!--		<img class="benpuraimg" src="../image/benpuraのロゴ.png";/>-->
+		<!--		<p class="title">ここにロゴとマイページを挿入</p>-->
+		<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+			layout:decorate="~{commons/layout}">
 	</div>
 
 	<div class="subtitle">
@@ -32,7 +32,7 @@
 		<a th:href="@{/cookCategory}" target="_blank">
 			<img class="shopimg" th:src="'data:image/png;base64,'+${shop.image}" alt="picture" />
 		</a>
-		
+
 		<div class="text">
 			<h1 class="shopName" th:text="${shop.shopName}"></h1>
 			<p class="shopAddress" th:text="${shop.shopAddress}"></p>
@@ -49,22 +49,22 @@
 		</div>
 	</div>
 
-	<div id="content2" th:each="shop2 : ${shopLists2}">
-		<br>
-		<img class="shopimg" th:src="'data:image/png;base64,'+${image[1]}" alt="oishii"></img>
-		<div class="text">
-			<h1 class="shopName" th:text="${shop2.shopName}"></h1>
-			<p class="shopAddress" th:text="${shop2.shopAddress}"></p>
-			<style>
-				.example {
-					display: flex;
-				}
-			</style>
-			<div class="example">
-				<a href="@{/}" class="btn btn-tag"><i class="fas fa-shopping-cart"></i>注文はこちら</a>
-				<a class="Information" href="/shopInformation">店舗情報を見る</a>
-			</div>
-		</div>
+<!--	<div id="content2" th:each="shop2 : ${shopLists2}">-->
+<!--		<br>-->
+<!--		<img class="shopimg" th:src="'data:image/png;base64,'+${image[1]}" alt="oishii"></img>-->
+<!--		<div class="text">-->
+<!--			<h1 class="shopName" th:text="${shop2.shopName}"></h1>-->
+<!--			<p class="shopAddress" th:text="${shop2.shopAddress}"></p>-->
+<!--			<style>-->
+<!--				.example {-->
+<!--					display: flex;-->
+<!--				}-->
+<!--			</style>-->
+<!--			<div class="example">-->
+<!--				<a href="@{/}" class="btn btn-tag"><i class="fas fa-shopping-cart"></i>注文はこちら</a>-->
+<!--				<a class="Information" href="/shopInformation">店舗情報を見る</a>-->
+<!--			</div>-->
+<!--		</div>-->
 
 
 		<div class="scroll">
