--- a/src/main/resources/templates/commons/layout.html
+++ b/src/main/resources/templates/commons/layout.html
@@ -11,7 +11,7 @@
 			</b>
 
 			<!--a href="/ボーデンさんのhtml名">-->
-			<a href="/_nextpagelogin">
+			<a href="/login">
 				<img src="/image/login.png" alt="Sample Image">
 				ログイン
 			</a>
